# is_projekat

./: .gitignore  README.md  pyproject.toml
data_processing/: build_tiles.py  provera_maski.py  tile_city.py  warp_maski.py
src/: evolucija_treninga.py  provera_pred.py  testiranje.py  train_dlvthree.py  train_unet.py  uporedi_modele.py  vizualizuj_poredjenje.py  vizualizuj_unet.py
