[project]
name = "is-park-segmentation"
version = "0.1.0"
description = "Segmentacija parkova na satelitskim snimcima"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "segmentation-models-pytorch>=0.5.0",
    "albumentations>=2.0.0",
    "rasterio>=1.5.0",
    "pandas>=3.0.0",
    "matplotlib>=3.11.0",
    "tqdm>=4.68.0",
    "numpy>=2.0.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
torchvision = [
    { index = "pytorch-cu121" },
]
torchaudio = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
